# phi-redactor

./: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  ruff.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
charts/phi-redactor/: Chart.yaml  values.yaml
charts/phi-redactor/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml
history/prompts/general/: 001-phi-redaction-market-research.general.prompt.md  002-hipaa-compliance-language-review.general.prompt.md  003-hipaa-de-identification-methods-fetch.general.prompt.md
src/phi_redactor/: __init__.py  config.py  models.py
src/phi_redactor/audit/: reports.py  trail.py
src/phi_redactor/cli/: config.py  main.py  plugins.py  report.py  serve.py
src/phi_redactor/dashboard/: routes.py
src/phi_redactor/detection/: engine.py  registry.py
src/phi_redactor/detection/recognizers/: __init__.py  fhir.py  hl7.py  license.py
src/phi_redactor/masking/: clustering.py  date_shifter.py  identity.py  semantic.py
src/phi_redactor/plugins/: example_plugin.py  loader.py
src/phi_redactor/proxy/: app.py  session.py
src/phi_redactor/proxy/adapters/: anthropic.py  azure.py  google.py  openai.py
src/phi_redactor/proxy/routes/: anthropic.py  azure.py  google.py  management.py  openai.py
src/phi_redactor/sdk/: __init__.py
src/phi_redactor/vault/: encryption.py  store.py
tests/: conftest.py
tests/integration/: test_compliance.py  test_detection_benchmark.py  test_masking_quality.py  test_proxy_anthropic.py  test_proxy_azure.py  test_proxy_google.py  test_proxy_openai.py  test_vault_isolation.py
tests/unit/: test_audit.py  test_dashboard.py  test_date_shifter.py  test_detection.py  test_fhir_hl7.py  test_hipaa_recognizers.py  test_identity_clustering.py  test_masking.py  test_plugins.py  test_streaming.py  test_vault.py  test_vault_encryption.py
