[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phi-redactor"
version = "0.1.1"
description = "HIPAA §164.514(c) surrogate code proxy — PHI never reaches the LLM"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Dilawar Shafiq", email = "dilawar.gopang@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
keywords = ["phi", "hipaa", "redaction", "llm", "proxy", "healthcare", "pseudonymization", "164-514-c", "surrogate-code", "expert-determination", "de-identification"]
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "faker>=40.0.0",
    "cryptography>=42.0.0",
    "click>=8.1.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "pytest-timeout>=2.3.0",
    "hypothesis>=6.98.0",
    "ruff==0.14.4",
    "mypy>=1.8.0",
]

[project.scripts]
phi-redactor = "phi_redactor.cli.main:cli"

[project.urls]
Homepage = "https://github.com/dilawar-gopang/phi-redactor"
Documentation = "https://github.com/dilawar-gopang/phi-redactor#readme"
Repository = "https://github.com/dilawar-gopang/phi-redactor"
Issues = "https://github.com/dilawar-gopang/phi-redactor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/phi_redactor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "E501",    # line too long — HTML templates and long strings are intentional
    "E402",    # module import not at top — lazy imports in CLI/proxy are intentional
    "S104",    # binding to 0.0.0.0 is intentional for a proxy server
    "S311",    # standard PRNG — Faker uses random for synthetic data generation, not crypto
    "S603",    # subprocess call for spaCy model download is intentional
    "B017",    # blind exception in tests — broad catch is intentional for proxy fail-safe tests
    "B904",    # raise-without-from-clause — HTTPException re-raise is standard FastAPI pattern
    "C416",    # unnecessary dict comprehension — pre-existing, readability preference
    "F841",    # unused variable — pre-existing in tests
    "N806",    # uppercase variable in function — KNOWN_PROVIDERS is a constant by convention
    "PT011",   # pytest.raises too broad — pre-existing in tests
    "RUF003",  # ambiguous EN DASH in comment — pre-existing documentation style
    "RUF012",  # ClassVar annotation — Presidio recognizer pattern is upstream convention
    "RUF059",  # unused unpacked variable — side-effect via vault store
]
